crates/pack/tests/compile_fail/fact_construction_blocked.stderr
error[E0451]: fields `key`, `id`, `payload`, `promotion_record` and `created_at` of struct `ContextFact` are private
  --> tests/compile_fail/fact_construction_blocked.rs:11:9
   |
10 |     let _fact = ContextFact {
   |                 ----------- in this type
11 |         key: ContextKey::Seeds,
   |         ^^^ private field
12 |         id: "forged-fact".into(),
   |         ^^ private field
13 |         payload: todo!(),
   |         ^^^^^^^ private field
14 |         promotion_record: todo!(),
   |         ^^^^^^^^^^^^^^^^ private field
15 |         created_at: "2026-01-01T00:00:00Z".into(),
   |         ^^^^^^^^^^ private field

error: trait `fact::ErasedFactPayload` is private
  --> tests/compile_fail/fact_construction_blocked.rs:13:18
   |
13 |         payload: todo!(),
   |                  ^^^^^^^ private trait
   |
   = note: this error originates in the macro `todo` (in Nightly builds, run with -Z macro-backtrace for more info)
